fix: add line-height to video container for consistent text spacing

--- a/scss/components-styles/App.scss
+++ b/scss/components-styles/App.scss
@@ -14,6 +14,7 @@
     width: 50%;
     gap: 5rem;
     padding: 0 3rem 5rem 3rem;
+    line-height: 1.5;
     > * {
         width: 100%;
     }
